--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -28,19 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m watershed\u001b[39m.\u001b[39mread_reaches_geometry_from_topagnps_asc_file(path_to_reaches_raster)\n\u001b[0;32m      4\u001b[0m watershed\u001b[39m.\u001b[39massign_strahler_number_to_reaches()\n\u001b[1;32m----> 5\u001b[0m watershed\u001b[39m.\u001b[39;49mdetermine_reaches_us_ds_direction()\n\u001b[0;32m      6\u001b[0m \u001b[39m# watershed.ignore_reaches_with_strahler_leq(1)\u001b[39;00m\n",
-      "File \u001b[1;32m~\\projects\\topagnps2cche1d\\topagnps2cche1d\\watershed.py:290\u001b[0m, in \u001b[0;36mWatershed.determine_reaches_us_ds_direction\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    287\u001b[0m CR_pot_usnd_id \u001b[39m=\u001b[39m current_reach\u001b[39m.\u001b[39mus_nd_id\n\u001b[0;32m    288\u001b[0m CR_pot_dsnd_id \u001b[39m=\u001b[39m current_reach\u001b[39m.\u001b[39mds_nd_id\n\u001b[1;32m--> 290\u001b[0m CR_pot_usnd \u001b[39m=\u001b[39m current_reach\u001b[39m.\u001b[39;49mnodes[CR_pot_usnd_id]\n\u001b[0;32m    291\u001b[0m CR_pot_dsnd \u001b[39m=\u001b[39m current_reach\u001b[39m.\u001b[39mnodes[CR_pot_dsnd_id]\n\u001b[0;32m    293\u001b[0m dist_CR_ds_RR_us \u001b[39m=\u001b[39m CR_pot_dsnd\u001b[39m.\u001b[39mdistance_from(RR_pot_usnd)\n",
-      "\u001b[1;31mKeyError\u001b[0m: None"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
      ]
     }
    ],
@@ -49,13 +46,30 @@
     "watershed.import_topagnps_reaches_network(path_to_reaches)\n",
     "watershed.read_reaches_geometry_from_topagnps_asc_file(path_to_reaches_raster)\n",
     "watershed.assign_strahler_number_to_reaches()\n",
-    "watershed.determine_reaches_us_ds_direction()\n",
+    "# watershed.determine_reaches_us_ds_direction()\n",
     "# watershed.ignore_reaches_with_strahler_leq(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{31: <topagnps2cche1d.node.Node object at 0x000001705E9DE310>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(watershed.reaches[3].nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +89,7 @@
       "Slope            : 0.01082\n",
       "Strahler Number  : 1\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (None, None)\n",
+      "(US/DS) Nodes    : (31, 31)\n",
       "-----------------------------\n",
       "Reach            : 4\n",
       "Receiving Reach  : 2\n",
@@ -96,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
