workshopping find_extremities

--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -43,6 +43,36 @@
     "\n",
     "\n",
     "def find_extremities_binary(img, output_index_starts_one=False):\n",
+    "\n",
+    "    neighbor_mask_d8 = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
+    "    neighbor_mask_d4 = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]])\n",
+    "\n",
+    "    num_neighbor_map_d8 = convolve2d(img, neighbor_mask_d8, mode=\"same\")\n",
+    "    num_neighbor_map_d8 = np.where(num_neighbor_map_d8 == 0, 0, num_neighbor_map_d8)\n",
+    "\n",
+    "    num_neighbor_map_d4 = convolve2d(img, neighbor_mask_d4, mode=\"same\")\n",
+    "    num_neighbor_map_d4 = np.where(num_neighbor_map_d4 == 0, 0, num_neighbor_map_d4)\n",
+    "\n",
+    "    count_ones_d8 = list(num_neighbor_map_d8.ravel()).count(1)\n",
+    "    count_ones_d4 = list(num_neighbor_map_d4.ravel()).count(1)\n",
+    "\n",
+    "    if 0 < count_ones_d8 <= 2: # easily identifiable ends\n",
+    "        # if 1: we know one end\n",
+    "        # if 2: we know both ends, easiest case\n",
+    "        extremities = [\n",
+    "        (r, c) for r, c in np.transpose(np.where(num_neighbor_map_d8 == 1))]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "    if len(extremities) == 2:\n",
+    "        if output_index_starts_one:\n",
+    "            extremities = [(r + 1, c + 1) for r, c in extremities]\n",
+    "        return extremities\n",
+    "\n",
     "    (rows, cols) = np.nonzero(img)\n",
     "\n",
     "    # Initialize empty list of coordinates\n",
@@ -70,73 +100,87 @@
     "        elif neighborhood == np.array([[1, 0, 0], [0, 1, 0], [0, 0, 0]]):\n",
     "            extremities.append((r - 1, c - 1))\n",
     "\n",
-    "    if output_index_starts_one:\n",
-    "        extremities = [(r + 1, c + 1) for r, c in extremities]\n",
+    "    \n",
     "\n",
     "    return extremities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1 0 0]\n",
-      " [0 2 0 0]\n",
-      " [0 3 0 0]\n",
-      " [2 2 0 0]]\n",
-      "[(0, 1)]\n"
+      "[[2 2 0 0 0]\n",
+      " [0 3 0 0 0]\n",
+      " [0 3 0 0 0]\n",
+      " [0 2 3 0 0]\n",
+      " [0 0 0 1 0]]\n",
+      "[[1 2 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 2 1 0 0]\n",
+      " [0 0 0 0 0]]\n",
+      "[(4, 3)]\n",
+      "[(0, 0), (3, 2)]\n",
+      "(0, 0) 2\n",
+      "(3, 2) 3\n",
+      "(4, 3) 1\n",
+      "It should be (0,0), and (4,3)\n"
      ]
     }
    ],
    "source": [
-    "I = np.array([[0, 1, 0, 0], [0, 1, 0, 0], [0, 1, 0, 0], [1, 1, 0, 0]])\n",
+    "# I = np.array([[1, 1, 0, 0, 0],\n",
+    "#               [0, 1, 0, 0, 0], \n",
+    "#               [0, 1, 0, 0, 0], \n",
+    "#               [0, 1, 1, 0, 0],\n",
+    "#               [0, 0, 0, 1, 0]])\n",
     "\n",
-    "# I = np.array([[0,1,0,0],\n",
-    "#               [0,1,0,0],\n",
-    "#               [0,1,0,0],\n",
-    "#               [0,1,0,0]])\n",
+    "I = np.array([[1, 1, 0, 0, 0],\n",
+    "              [0, 1, 0, 0, 0], \n",
+    "              [0, 1, 0, 0, 0], \n",
+    "              [0, 0, 1, 0, 0],\n",
+    "              [0, 0, 0, 1, 0]])\n",
     "\n",
-    "# I = np.array([[0,1,0,0],\n",
-    "#               [0,1,0,0],\n",
-    "#               [0,1,1,0],\n",
-    "#               [0,0,1,0]])\n",
+    "neighbor_mask_d8 = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
+    "neighbor_mask_d4 = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]])\n",
     "\n",
-    "# I = np.array([[0,1,0],\n",
-    "#               [0,1,0],\n",
-    "#               [1,1,0]])\n",
+    "J_d8 = convolve2d(I, neighbor_mask_d8, mode=\"same\")\n",
+    "J_d8 = np.where(I == 0, 0, J_d8)\n",
+    "print(J_d8)\n",
     "\n",
-    "neighb0 = np.array([[0, 0, 0], [0, 1, 0], [0, 0, 0]])\n",
+    "J_d4 = convolve2d(I, neighbor_mask_d4, mode=\"same\")\n",
+    "J_d4 = np.where(I == 0, 0, J_d4)\n",
+    "print(J_d4)\n",
     "\n",
-    "neighb1 = np.array([[0, 1, 0], [0, 1, 0], [0, 0, 0]])\n",
-    "\n",
-    "neighb1 = np.array([[0, 0, 1], [0, 1, 0], [0, 0, 0]])\n",
-    "\n",
-    "neighborhoods = {0: np.array([[0, 0, 0], [0, 1, 0], [0, 0, 0]]), 1: []}\n",
-    "\n",
-    "\n",
-    "neighbor_mask = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
-    "\n",
-    "J = convolve2d(I, neighbor_mask, mode=\"same\", boundary=\"fill\", fillvalue=0)\n",
-    "J = np.where(I == 0, 0, J)\n",
-    "print(J)\n",
-    "\n",
-    "extremities = [\n",
-    "    (r, c) for r, c in np.transpose(np.where((J <= min(2, J[J > 0].min())) & (I == 1)))\n",
+    "# extremities = [\n",
+    "#     (r, c) for r, c in np.transpose(np.where((J <= min(2, J[J > 0].min())) & (I == 1)))\n",
+    "# ]\n",
+    "extremities_d8 = [\n",
+    "    (r, c) for r, c in np.transpose(np.where((J_d8 == 1)))\n",
     "]\n",
-    "print(extremities)"
+    "extremities_d4 = [\n",
+    "    (r, c) for r, c in np.transpose(np.where((J_d4 == 1)))\n",
+    "]\n",
+    "\n",
+    "print(extremities_d8)\n",
+    "print(extremities_d4)\n",
+    "\n",
+    "for extrem in extremities_d4:\n",
+    "    row, col = extrem\n",
+    "    print((row,col),J_d8[row,col])\n",
+    "\n",
+    "for extrem in extremities_d8:\n",
+    "    row, col = extrem\n",
+    "    print((row,col),J_d8[row,col])\n",
+    "\n",
+    "# chercher les d4, tester si ils ont des voisins d8\n",
+    "print('It should be (0,0), and (4,3)')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
