--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -116,19 +116,21 @@
      "text": [
       "[[2 2 0 0 0]\n",
       " [0 3 0 0 0]\n",
-      " [0 3 0 0 0]\n",
-      " [0 2 3 0 0]\n",
-      " [0 0 0 1 0]]\n",
+      " [0 2 0 0 0]\n",
+      " [0 0 2 0 0]\n",
+      " [0 0 0 2 1]]\n",
       "[[1 2 0 0 0]\n",
       " [0 2 0 0 0]\n",
-      " [0 2 0 0 0]\n",
-      " [0 2 1 0 0]\n",
-      " [0 0 0 0 0]]\n",
-      "[(4, 3)]\n",
-      "[(0, 0), (3, 2)]\n",
-      "(0, 0) 2\n",
-      "(3, 2) 3\n",
-      "(4, 3) 1\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 1 1]]\n",
+      "[(4, 4)]\n",
+      "[(0, 0), (2, 1), (4, 3), (4, 4)]\n",
+      "[[1 0 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 1 0 0 0]\n",
+      " [0 0 2 0 0]\n",
+      " [0 0 0 1 0]]\n",
       "It should be (0,0), and (4,3)\n"
      ]
     }
@@ -144,7 +146,7 @@
     "              [0, 1, 0, 0, 0], \n",
     "              [0, 1, 0, 0, 0], \n",
     "              [0, 0, 1, 0, 0],\n",
-    "              [0, 0, 0, 1, 0]])\n",
+    "              [0, 0, 0, 1, 1]])\n",
     "\n",
     "neighbor_mask_d8 = np.array([[1, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
     "neighbor_mask_d4 = np.array([[0, 1, 0], [1, 0, 1], [0, 1, 0]])\n",
@@ -170,13 +172,7 @@
     "print(extremities_d8)\n",
     "print(extremities_d4)\n",
     "\n",
-    "for extrem in extremities_d4:\n",
-    "    row, col = extrem\n",
-    "    print((row,col),J_d8[row,col])\n",
-    "\n",
-    "for extrem in extremities_d8:\n",
-    "    row, col = extrem\n",
-    "    print((row,col),J_d8[row,col])\n",
+    "print(J_d8-J_d4)\n",
     "\n",
     "# chercher les d4, tester si ils ont des voisins d8\n",
     "print('It should be (0,0), and (4,3)')\n"
