working on junctions

--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,22 +20,24 @@
     "root_dir = Path(\n",
     "    \"../data_inputs/goodwin_creek_1m_1_and_3_reaches/TopAGNPS_DataSets/3_Reach\"\n",
     ")\n",
+    "# root_dir = Path(\"../data_inputs/topagnps_ohio_files/\")\n",
     "\n",
     "path_to_reaches = root_dir / \"AnnAGNPS_Reach_Data_Section.csv\"\n",
+    "path_to_cells = root_dir / \"AnnAGNPS_Cell_Data_Section.csv\"\n",
     "path_to_reaches_raster = root_dir / \"AnnAGNPS_Reach_IDs.asc\"\n",
     "path_to_agflow_reaches = root_dir / \"AgFlow_Reach_Data.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 84.43it/s]\n"
+      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 83.18it/s]\n"
      ]
     }
    ],
@@ -45,12 +47,57 @@
     "watershed.read_reaches_geometry_from_topagnps_asc_file(path_to_reaches_raster)\n",
     "watershed.assign_strahler_number_to_reaches()\n",
     "watershed.determine_reaches_us_ds_direction()\n",
+    "watershed.import_topagnps_cells(path_to_cells)\n",
     "# watershed.ignore_reaches_with_strahler_leq(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "watershed.cells[23].receiving_reach_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 0\n",
+      "2 2\n",
+      "4 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "\n",
+    "graph = watershed.current_graph\n",
+    "\n",
+    "for node in graph.nodes:\n",
+    "    print(node, graph.in_degree(node))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,24 +107,192 @@
       "-----------------------------\n",
       "Reach            : 2\n",
       "Receiving Reach  : 1\n",
-      "Slope            : 0.01716\n",
-      "Strahler Number  : 2\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 3\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (30, 1)\n",
+      "(US/DS) Nodes    : (2, 1)\n",
       "-----------------------------\n",
       "Reach            : 3\n",
       "Receiving Reach  : 2\n",
-      "Slope            : 0.01082\n",
-      "Strahler Number  : 1\n",
+      "Slope            : 0.00097\n",
+      "Strahler Number  : 3\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (31, 105)\n",
+      "(US/DS) Nodes    : (77, 3)\n",
       "-----------------------------\n",
       "Reach            : 4\n",
-      "Receiving Reach  : 2\n",
-      "Slope            : 0.01332\n",
+      "Receiving Reach  : 3\n",
+      "Slope            : 0.00251\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (78, 162)\n",
+      "-----------------------------\n",
+      "Reach            : 5\n",
+      "Receiving Reach  : 4\n",
+      "Slope            : 1e-05\n",
       "Strahler Number  : 1\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (383, 106)\n"
+      "(US/DS) Nodes    : (163, 191)\n",
+      "-----------------------------\n",
+      "Reach            : 6\n",
+      "Receiving Reach  : 4\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (192, 237)\n",
+      "-----------------------------\n",
+      "Reach            : 7\n",
+      "Receiving Reach  : 3\n",
+      "Slope            : 0.00357\n",
+      "Strahler Number  : 3\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (292, 238)\n",
+      "-----------------------------\n",
+      "Reach            : 8\n",
+      "Receiving Reach  : 7\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (323, 293)\n",
+      "-----------------------------\n",
+      "Reach            : 9\n",
+      "Receiving Reach  : 8\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (339, 324)\n",
+      "-----------------------------\n",
+      "Reach            : 10\n",
+      "Receiving Reach  : 9\n",
+      "Slope            : 0.00171\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (340, 361)\n",
+      "-----------------------------\n",
+      "Reach            : 11\n",
+      "Receiving Reach  : 9\n",
+      "Slope            : 0.00242\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (362, 428)\n",
+      "-----------------------------\n",
+      "Reach            : 12\n",
+      "Receiving Reach  : 11\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (429, 452)\n",
+      "-----------------------------\n",
+      "Reach            : 13\n",
+      "Receiving Reach  : 12\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (453, 462)\n",
+      "-----------------------------\n",
+      "Reach            : 14\n",
+      "Receiving Reach  : 12\n",
+      "Slope            : 0.00427\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (463, 492)\n",
+      "-----------------------------\n",
+      "Reach            : 15\n",
+      "Receiving Reach  : 11\n",
+      "Slope            : 0.00347\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (586, 493)\n",
+      "-----------------------------\n",
+      "Reach            : 16\n",
+      "Receiving Reach  : 8\n",
+      "Slope            : 0.00359\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (690, 587)\n",
+      "-----------------------------\n",
+      "Reach            : 17\n",
+      "Receiving Reach  : 7\n",
+      "Slope            : 0.00232\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (716, 691)\n",
+      "-----------------------------\n",
+      "Reach            : 18\n",
+      "Receiving Reach  : 17\n",
+      "Slope            : 0.00112\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (808, 717)\n",
+      "-----------------------------\n",
+      "Reach            : 19\n",
+      "Receiving Reach  : 17\n",
+      "Slope            : 0.00115\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (847, 809)\n",
+      "-----------------------------\n",
+      "Reach            : 20\n",
+      "Receiving Reach  : 2\n",
+      "Slope            : 0.00269\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (943, 848)\n",
+      "-----------------------------\n",
+      "Reach            : 21\n",
+      "Receiving Reach  : 20\n",
+      "Slope            : 0.00523\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (970, 944)\n",
+      "-----------------------------\n",
+      "Reach            : 22\n",
+      "Receiving Reach  : 20\n",
+      "Slope            : 0.00287\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1072, 971)\n",
+      "-----------------------------\n",
+      "Reach            : 23\n",
+      "Receiving Reach  : 22\n",
+      "Slope            : 1e-05\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1073, 1073)\n",
+      "-----------------------------\n",
+      "Reach            : 24\n",
+      "Receiving Reach  : 23\n",
+      "Slope            : 0.00228\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1119, 1074)\n",
+      "-----------------------------\n",
+      "Reach            : 25\n",
+      "Receiving Reach  : 23\n",
+      "Slope            : 0.00094\n",
+      "Strahler Number  : 2\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1150, 1120)\n",
+      "-----------------------------\n",
+      "Reach            : 26\n",
+      "Receiving Reach  : 25\n",
+      "Slope            : 0.00407\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1151, 1310)\n",
+      "-----------------------------\n",
+      "Reach            : 27\n",
+      "Receiving Reach  : 25\n",
+      "Slope            : 0.00126\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1311, 1360)\n",
+      "-----------------------------\n",
+      "Reach            : 28\n",
+      "Receiving Reach  : 22\n",
+      "Slope            : 0.00469\n",
+      "Strahler Number  : 1\n",
+      "Ignore?          : False\n",
+      "(US/DS) Nodes    : (1361, 1413)\n"
      ]
     }
    ],
@@ -91,13 +306,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "reach2 = watershed.reaches[2]\n",
     "reach3 = watershed.reaches[3]\n",
     "reach4 = watershed.reaches[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topagnps2cche1d.cell import Cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'right'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cell = Cell(id=12)\n",
+    "cell.type"
    ]
   },
   {
